--- a/grc-nedir.html
+++ b/grc-nedir.html
@@ -27,9 +27,9 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">
-                    <a href="index.html">GRCKobi</a>
-                </div>
+               <div class="logo">
+    <a href="index.html">GRC<span class="logo-kobi">Kobi</span></a>
+</div>
                 <nav class="main-navigation">
                     <ul class="nav-menu">
                         <li><a href="index.html">Ana Sayfa</a></li>
@@ -160,5 +160,6 @@
     <button id="scrollTopBtn" title="Yukarı Çık">&uarr;</button>
 </body>
 </html>
+
 
 
