--- a/iletisim.html
+++ b/iletisim.html
@@ -15,7 +15,9 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo"><a href="index.html">GRCKobi</a></div>
+                <div class="logo">
+    <a href="index.html">GRC<span class="logo-kobi">Kobi</span></a>
+</div>
                 <nav class="main-navigation">
                     <ul class="nav-menu">
                         <li><a href="index.html">Ana Sayfa</a></li>
@@ -69,5 +71,6 @@
     <button id="scrollTopBtn" title="Yukarı Çık">&uarr;</button>
 </body>
 </html>
+
 
 
