--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">
-                    <a href="index.html">GRCKobi</a>
+               <div class="logo">
+    <a href="index.html">GRC<span class="logo-kobi">Kobi</span></a>
+</div>
                 </div>
                 <nav class="main-navigation">
                     <ul class="nav-menu">
@@ -133,5 +134,6 @@
 
 </body>
 </html>
+
 
 
