--- a/risk-testi.html
+++ b/risk-testi.html
@@ -21,7 +21,7 @@
                 <nav class="main-navigation">
 <nav class="main-navigation" id="mainNavMenu"> 
     <!-- İçindeki <ul> listesi aynı kalacak -->
-</nav>                        <li><a href="index.html">Ana Sayfa</a></li>
+                       <li><a href="index.html">Ana Sayfa</a></li>
                         <li><a href="grc-nedir.html">GRC Nedir?</a></li>
                         <li><a href="kvkk-rehberi.html">KVKK Rehberi</a></li>
                         <li><a href="risk-testi.html" class="active">Risk Testi</a></li>
@@ -202,6 +202,7 @@
     <button id="scrollTopBtn" title="Yukarı Çık">&uarr;</button>
 </body>
 </html>
+
 
 
 
